Custom Offline Payments - Correct SonarCloud issues